<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >											<!-- 声明了一个线性布局 -->
    <LinearLayout
    	android:orientation="horizontal"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	>								<!-- 声明一个线性布局 -->
    	<TextView
    		android:text="@string/txtLong"
    		android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:layout_gravity="center_vertical"
    		/>
    	<EditText
    		android:id="@+id/etLong"
    		android:text="@string/etLong"
    		android:layout_width="110px"
    		android:layout_height="45px"
    		/>
    	<TextView
    		android:text="@string/txtLat"
    		android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:layout_gravity="center_vertical"
    		android:paddingLeft="8px"
    		/>
		<EditText
			android:id="@+id/etLat"
			android:text="@string/etLat"
    		android:layout_width="110px"
    		android:layout_height="45px"
    		/>  
		</LinearLayout>
		<LinearLayout
			android:orientation="horizontal"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			>
			<Button	
	    		android:id="@+id/btnGo"
	    		android:text="@string/btnGo"
	    		android:layout_width="wrap_content"
	    		android:layout_height="wrap_content"
	    		android:layout_weight="4"
	    		/>
			<RadioGroup 
				android:id="@+id/rg" 
				android:orientation="horizontal"
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content"
				android:layout_weight="1"
				>
				<RadioButton 
					android:text="@string/normal" 
					android:id="@+id/normal" 
					android:checked="true"
					android:layout_width="wrap_content" 
					android:layout_height="wrap_content">
			      	</RadioButton>   
				<RadioButton 
					android:text="@string/satellite" 
					android:id="@+id/satellite" 
					android:layout_width="wrap_content" 
					android:layout_height="wrap_content">
					</RadioButton>  
				</RadioGroup>
			</LinearLayout>
		<com.google.android.maps.MapView  
    		android:id="@+id/mv"
    		android:clickable="true"
    		android:enabled="true"
    		android:layout_width="fill_parent"
    		android:layout_height="fill_parent"
    		android:apiKey="0uUxs9aHasYpZ5iAhcWYXLbOgSHDTO1HNvXFh7w"
    		/>
</LinearLayout>